manual config reading

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,15 +1,1 @@
-version = 2.7.5
-maxColumn = 100
-continuationIndent.defnSite = 2
-continuationIndent.extendSite = 2
-align = none
-spaces.inImportCurlyBraces = true
-newlines.alwaysBeforeMultilineDef = false
-newlines.implicitParamListModifierForce = [before,after]
-newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
-optIn.breaksInsideChains = true
-optIn.breakChainOnFirstMethodDot = true
-
-rewrite.rules = [RedundantBraces]
-rewrite.redundantBraces.maxLines = 6
-rewrite.redundantBraces.methodBodies = true
+version = 3.0.0-RC6
